# heuristics

atcoder/atcoder_contest_scheduling/: Cargo.toml  README.md  input.txt  output.txt
atcoder/atcoder_contest_scheduling/src/: main.rs
atcoder/atcoder_contest_scheduling/tester/: tester.py
atcoder/crops_on_grid/: .gitignore  README.md  in.txt  out.txt  pyproject.toml
atcoder/crops_on_grid/py_src/: main1.py  main2.py
atcoder/crops_on_grid/src/: main.rs
atcoder/crops_on_grid/src/utils/: mod.rs  test_all.rs
atcoder/crops_on_grid/tools/: vis.html
atcoder/topological_map/: pyproject.toml
atcoder/topological_map/data/: out.txt
atcoder/topological_map/src/: check.py  gen.py  main.py
atcoder/topological_map/tools/: vis.html
atcoder/topological_map/tools/in/: 0000.txt  0001.txt  0016.txt
