[package]
name = "heuristics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.6.2"
counter = "0.5.7"
getrandom = "0.2.10"
glidesort = "0.1.2"
itertools = "0.11.0"
itertools-num = "0.1.3"
multimap = "0.9.0"
omniswap = "0.1.0"
proconio = "0.4.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand_distr = "0.4.3"
rand_hc = "0.3.2"
rand_pcg = "0.3.1"
recur-fn = "2.2.0"
superslice = "1.0.0"
tap = "1.0.1"
